--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@angular/service-worker": "~9.1.11",
     "ngx-quill": "^11.1.0",
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
